--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-validator": "^5.3.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "session-file-store": "^1.2.0",
     "uuid": "^3.3.2"
   }
 }
