--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
     "http-errors": "~1.6.2",
+    "memorystore": "^1.6.0",
     "morgan": "~1.9.0",
     "session-file-store": "^1.2.0",
     "uuid": "^3.3.2"
