--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "http-errors": "~1.6.2",
     "memorystore": "^1.6.0",
     "morgan": "~1.9.0",
+    "pg": "^7.5.0",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^4.41.0",
     "sequelize-cli": "^5.2.0",
     "uuid": "^3.3.2"
