--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "express-validator": "^5.3.0",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "express-validator": "^5.3.1",
     "http-errors": "~1.6.2",
-    "memorystore": "^1.6.0",
+    "memorystore": "^1.6.1",
     "morgan": "~1.9.0",
-    "pg": "^7.6.0",
-    "pg-hstore": "^2.3.2",
-    "sequelize": "^4.41.0",
-    "sequelize-cli": "^5.2.0",
-    "uuid": "^3.3.2"
+    "pg": "^7.12.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.0.0",
+    "sequelize-cli": "^5.5.1",
+    "uuid": "^3.3.3"
   }
 }
